--- a/templates/fleet_quote_template.html
+++ b/templates/fleet_quote_template.html
@@ -55,7 +55,7 @@
 <body>
   <div class="header-row">
     <div class="logo-block">
-      <img src="<img src="https://quote-assets.onrender.com/logo.png"
+      <img src="https://quote-assets.onrender.com/logo.png"
      alt="Company Logo"
      style="width: 180px; max-height: 80px; object-fit: contain; display: block;">
       <div class="subtext">The Ultimate Fleet Management Solution Provider</div>
